@@ -1,1 +1,2 @@
 Owen Taylor <otaylor@redhat.com>
+Kristian Rietveld <kris@gtk.org>
