@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.52)
 
-AC_INIT(memprof, 0.5)
+AC_INIT(memprof, 0.5.0)
 AC_CONFIG_SRCDIR(memprof.glade)
 
 dnl $Format: "AM_INIT_AUTOMAKE(MemProf, $ReleaseVersion$)" $
